# hspec-hedgehog

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  hspec-hedgehog.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml  haskell.yml  publish.yml
src/Test/Hspec/: Hedgehog.hs
test/: ExampleSpec.hs  Spec.hs
test/Test/Hspec/: HedgehogSpec.hs
