cabal-version: 1.12
name:           hspec-hedgehog
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/parsonsmatt/hspec-hedgehog#readme>
synopsis:       Integrate Hedgehog and Hspec!
category:       Testing
homepage:       https://github.com/parsonsmatt/hspec-hedgehog#readme
bug-reports:    https://github.com/parsonsmatt/hspec-hedgehog/issues
author:         Matt Parsons
maintainer:     parsonsmatt@gmail.com
copyright:      2020 Matt Parsons
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/parsonsmatt/hspec-hedgehog

library
  exposed-modules:
      Test.Hspec.Hedgehog
  hs-source-dirs:
      src
  build-depends:
      base          >= 4.7   && < 5
    , hspec         >= 2.4.4 && < 3
    , hspec-core    >= 2.4.4 && < 3
    , hedgehog      >= 1.0   && < 2
    , HUnit         >= 1.5   && < 2
    , QuickCheck    >= 2.9.2 && < 3
    , splitmix      >= 0.0.1 && < 1
  default-language: Haskell2010

test-suite hspec-hedgehog-test
  type: exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec-hedgehog
    , hspec
    , hedgehog
  default-language: Haskell2010
